[package]
name = "cyonix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
directories = "5.0.0"
home = "0.5.4"
dirs = "5.0.0"
walkdir = "2.3.3"